hyperparam search - shorter texts

--- a/days/w2d4/hpsearch.ipynb
+++ b/days/w2d4/hpsearch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "import torchtext\n",
     "import transformers\n",
     "from torch.utils.data import DataLoader\n",
+    "import requests\n",
     "\n",
     "data_train, data_test = torchtext.datasets.IMDB(root='.data', split=('train', 'test'))"
    ]
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,20 +163,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading: \"https://mlab-evgenian.s3.us-west-1.amazonaws.com/model.pt?response-content-disposition=inline&X-Amz-Security-Token=IQoJb3JpZ2luX2VjEFEaCXVzLXdlc3QtMSJHMEUCIQDvAHz%2BQZ2pA%2B99awDeULF0xIiLBvdzly2OY%2FZC0n2YmAIgbRy97M1Qyq49TfQNrONgn8xCuhmoPP7nt7REyALxn7IqlQIIahADGgwyNDcxOTcyOTUyMjUiDHOnY%2FY%2FvU4KWdujLSryATRgZ%2FOHsXJiD7mIVOgBg%2BMKBto7R9oCPWLpzRzgLPFEdGwVBLWf%2Bft8ODs8a%2BYoYS7LxjNFf1fW2aL2B%2Bm8ZzP5aNfmA2U75nw%2FEmZqQYs8cd1GGf6g8biUeOBoY8QJYdD06JC%2BS6MoPSThqlt4hRR20ElvbSTaYClCTZSE639Y%2FIakhR32HxFTYdnu0axuikgkLo0%2F9ftNQqrEvI4J8CuQ5%2B7z0dF3hBKoYBDEjpEswHQTUwNBatES5uHIO0GpMm8JxDP0jB%2BoIBoj8PQiX2CBebIWLpbNLSt9a1Q0P%2B63yAy4AHdXieHf2y247uXi%2BfHMMNycg48GOt8Bhji%2F8Y3VLJqHNURPd8ONJP1lkvxKenXt9Dqca3dWA3gV%2FzkBuqbKqWLNl9uzlAao%2B%2FBtM2ENNviLBMf7ZkrtRr6wxHGl%2F8vmhW8vutLKACbAG%2FrYakKYRtknI5BFtOh0m9XivL7%2BRBjWInzBEEpzgWcGm3X7CJYrpaiRanu4gpcefilbUBi%2BUUtXvyzofi43tV8bZnKyHbaPUTRQH7Fdzf74qL16zawKjo8451DH00rvTpt7bo9ZQ8vSOYadogE2kH8go63sUclRYAyoS7EZqrZ%2F6tgLBFzWeXo5GmHv%2Fg%3D%3D&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20220114T012908Z&X-Amz-SignedHeaders=host&X-Amz-Expires=86400&X-Amz-Credential=ASIATTDQ3MJ4T5P45XGI%2F20220114%2Fus-west-1%2Fs3%2Faws4_request&X-Amz-Signature=488e67a921925f7dbaac20f37f88046279e8d34889b5d1e51ea599acceb93b21\" to /home/ubuntu/.cache/torch/hub/checkpoints/model.pt\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0db1ada0736c47798e7108bf94b91a34",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=522516903.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "loaded_state_dict = t.hub.load_state_dict_from_url(\"https://mlab-evgenian.s3.us-west-1.amazonaws.com/model.pt?response-content-disposition=inline&X-Amz-Security-Token=IQoJb3JpZ2luX2VjEFEaCXVzLXdlc3QtMSJHMEUCIQDvAHz%2BQZ2pA%2B99awDeULF0xIiLBvdzly2OY%2FZC0n2YmAIgbRy97M1Qyq49TfQNrONgn8xCuhmoPP7nt7REyALxn7IqlQIIahADGgwyNDcxOTcyOTUyMjUiDHOnY%2FY%2FvU4KWdujLSryATRgZ%2FOHsXJiD7mIVOgBg%2BMKBto7R9oCPWLpzRzgLPFEdGwVBLWf%2Bft8ODs8a%2BYoYS7LxjNFf1fW2aL2B%2Bm8ZzP5aNfmA2U75nw%2FEmZqQYs8cd1GGf6g8biUeOBoY8QJYdD06JC%2BS6MoPSThqlt4hRR20ElvbSTaYClCTZSE639Y%2FIakhR32HxFTYdnu0axuikgkLo0%2F9ftNQqrEvI4J8CuQ5%2B7z0dF3hBKoYBDEjpEswHQTUwNBatES5uHIO0GpMm8JxDP0jB%2BoIBoj8PQiX2CBebIWLpbNLSt9a1Q0P%2B63yAy4AHdXieHf2y247uXi%2BfHMMNycg48GOt8Bhji%2F8Y3VLJqHNURPd8ONJP1lkvxKenXt9Dqca3dWA3gV%2FzkBuqbKqWLNl9uzlAao%2B%2FBtM2ENNviLBMf7ZkrtRr6wxHGl%2F8vmhW8vutLKACbAG%2FrYakKYRtknI5BFtOh0m9XivL7%2BRBjWInzBEEpzgWcGm3X7CJYrpaiRanu4gpcefilbUBi%2BUUtXvyzofi43tV8bZnKyHbaPUTRQH7Fdzf74qL16zawKjo8451DH00rvTpt7bo9ZQ8vSOYadogE2kH8go63sUclRYAyoS7EZqrZ%2F6tgLBFzWeXo5GmHv%2Fg%3D%3D&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20220114T012908Z&X-Amz-SignedHeaders=host&X-Amz-Expires=86400&X-Amz-Credential=ASIATTDQ3MJ4T5P45XGI%2F20220114%2Fus-west-1%2Fs3%2Faws4_request&X-Amz-Signature=488e67a921925f7dbaac20f37f88046279e8d34889b5d1e51ea599acceb93b21\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0, dtype=torch.int32)"
+       "'[unused1] [unused2] [unused3]'"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "vect = t.tensor([1, 2, 3])\n",
+    "tokenizer.decode(vect)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
