checkpoint with data-parallel training

--- a/days/w2d5/w2d5.ipynb
+++ b/days/w2d5/w2d5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,17 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def save_tokenization(json_corpus_path):\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,13 +36,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_baby_corpus(in_file, out_file, size):\n",
+    "    with open(in_file) as fp:\n",
+    "        json_contents = json.load(fp=fp)\n",
+    "    with open(out_file, 'w') as out:\n",
+    "        json.dump(json_contents[:size], fp=out)\n",
+    "\n",
+    "size = 1000\n",
+    "# write_baby_corpus(in_file='/home/ubuntu/lw_corpus.json', out_file=f'/home/ubuntu/baby_corpus.{size}.json', size=size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
     "gpt = t.load(\"gpt_trained\")\n",
     "# gpt = transformers.GPT2LMHeadModel.from_pretrained('gpt2').to(device=device)\n",
     "gpt.eval();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GPT2Config {\n",
+       "  \"_name_or_path\": \"gpt2\",\n",
+       "  \"activation_function\": \"gelu_new\",\n",
+       "  \"architectures\": [\n",
+       "    \"GPT2LMHeadModel\"\n",
+       "  ],\n",
+       "  \"attn_pdrop\": 0.1,\n",
+       "  \"bos_token_id\": 50256,\n",
+       "  \"embd_pdrop\": 0.1,\n",
+       "  \"eos_token_id\": 50256,\n",
+       "  \"initializer_range\": 0.02,\n",
+       "  \"layer_norm_epsilon\": 1e-05,\n",
+       "  \"model_type\": \"gpt2\",\n",
+       "  \"n_ctx\": 1024,\n",
+       "  \"n_embd\": 768,\n",
+       "  \"n_head\": 12,\n",
+       "  \"n_inner\": null,\n",
+       "  \"n_layer\": 12,\n",
+       "  \"n_positions\": 1024,\n",
+       "  \"reorder_and_upcast_attn\": false,\n",
+       "  \"resid_pdrop\": 0.1,\n",
+       "  \"scale_attn_by_inverse_layer_idx\": false,\n",
+       "  \"scale_attn_weights\": true,\n",
+       "  \"summary_activation\": null,\n",
+       "  \"summary_first_dropout\": 0.1,\n",
+       "  \"summary_proj_to_labels\": true,\n",
+       "  \"summary_type\": \"cls_index\",\n",
+       "  \"summary_use_proj\": true,\n",
+       "  \"task_specific_params\": {\n",
+       "    \"text-generation\": {\n",
+       "      \"do_sample\": true,\n",
+       "      \"max_length\": 50\n",
+       "    }\n",
+       "  },\n",
+       "  \"transformers_version\": \"4.15.0\",\n",
+       "  \"use_cache\": true,\n",
+       "  \"vocab_size\": 50257\n",
+       "}"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gpt.config"
    ]
   },
   {
@@ -64,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,18 +144,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Less Wrong: The Solution to AI Alignment: Minddiscipline,\n",
-      "science, economics, etc. The evidence continued on for longer\n",
-      "basis, with improved\n",
-      "aggregations, a dramatically different burden of documentation, and the volumes and analysis of numerology that306you already have. The reduction in grayish ink suggested that motivated modelling is not much more useful for solving the difficult tasks you're looking for. Previous studies had found deep adoption in cloud computing, and Salesforce for several, and now it\\'s\n",
-      "more common for organizations\n"
+      "Less Wrong: The Solution to AI Alignment: Developing >100,000 US citizenships [FRA.com](https://periccummings.org/2021/06/21-frankfurt-et al.ges-don-hetb-gates-plan/), Gunsney Tates (my suggestion) mechanisms for [LessWrong, founded in design](https://facebook.com/walidgelladt.stream/posts/1010037224115015178913.15_275.\n"
      ]
     }
    ],
@@ -102,7 +161,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The most important cognitive bias is a ~20% reduction in pain\n",
+      "compensation, and hence increase happiness.\n",
+      "This is what sticks out in my case, and somewhat of my concern for longtermism has cleared AND\n",
+      "ALAY so far. Indeed, I expect a (higherly vibrating) 12% decrease in pain and\n",
+      "suffering relative to other symptoms.\n",
+      "* * *\n",
+      "I\\'d also welcome some thoughts about why.\n",
+      "body-damage accords.\n",
+      "![](/images/ukass\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(gpt_pred(\"The most important cognitive bias is\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -164,6 +248,44 @@
     "            break\n",
     "    return tokenizer.decode(input_ids)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'write'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-123-fbd8b8736e79>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"[1, 2, 3]\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"testing\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/usr/lib/python3.8/json/__init__.py\u001b[0m in \u001b[0;36mdump\u001b[0;34m(obj, fp, skipkeys, ensure_ascii, check_circular, allow_nan, cls, indent, separators, default, sort_keys, **kw)\u001b[0m\n\u001b[1;32m    178\u001b[0m     \u001b[0;31m# a debuggability cost\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    179\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mchunk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0miterable\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 180\u001b[0;31m         \u001b[0mfp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchunk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    181\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    182\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'write'"
+     ]
+    }
+   ],
+   "source": [
+    "json.dump([1, 2, 3], \"testing\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
