--- a/days/w2d3/w2d3.ipynb
+++ b/days/w2d3/w2d3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,8 @@
     "import torch\n",
     "from torchtyping import TensorType\n",
     "import einops\n",
-    "import gpt_tests\n"
+    "import transformers\n",
+    "import gpt_tests"
    ]
   },
   {
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -167,6 +168,7 @@
     "        layer_norm_epsilon,\n",
     "    ) -> None:\n",
     "        super().__init__()\n",
+    "        self.vocab_size = vocab_size\n",
     "        self.token_embeddings = torch.nn.Embedding(vocab_size, hidden_size)\n",
     "        self.pos_embeddings = torch.nn.Embedding(max_position_embeddings, hidden_size)\n",
     "        self.dropout = torch.nn.Dropout(p=dropout)\n",
@@ -175,6 +177,7 @@
     "            for _ in range(num_layers)\n",
     "        ])\n",
     "        self.norm = torch.nn.LayerNorm(hidden_size)\n",
+    "        self.tokenizer = transformers.GPT2Tokenizer.from_pretrained(\"gpt2\")\n",
     "    \n",
     "    def forward(self, input_ids: TensorType[\"batch_size\", \"seq_len\"]):\n",
     "        batch_size, seq_len = input_ids.shape\n",
@@ -193,17 +196,116 @@
     "            logits=logits,\n",
     "            final_encoding=final_encoding,\n",
     "        )\n",
+    "    \n",
+    "    def next_token(\n",
+    "        self,\n",
+    "        input_ids: TensorType[\"seq_len\"],\n",
+    "        temperature: float,\n",
+    "        freq_penalty: float = 2.0\n",
+    "    ) -> TensorType[\"vocab_size\"]:\n",
+    "        output = self.forward(input_ids)\n",
+    "        id_frequencies = torch.bincount(input_ids.squeeze(0), minlength=self.vocab_size).unsqueeze(0)\n",
+    "        return torch.nn.functional.softmax(output.logits / temperature - id_frequencies * freq_penalty)\n",
     "\n",
+    "    def generate(\n",
+    "        self,\n",
+    "        text: str,\n",
+    "        max_length: int = 30,\n",
+    "        temperature: float = 1.0,\n",
+    "        freq_penalty: float = 2.0,\n",
+    "    ):\n",
+    "        output_ids = torch.tensor([self.tokenizer(text).input_ids])\n",
+    "        seq_len = output_ids.shape[1]\n",
+    "\n",
+    "        while seq_len < max_length:\n",
+    "            output_logits = self.next_token(output_ids, temperature, freq_penalty)\n",
+    "            next_token_id = torch.argmax(output_logits, dim=-1, keepdim=True)\n",
+    "            output_ids = torch.cat([output_ids, next_token_id], dim=-1)\n",
+    "            seq_len = output_ids.shape[1]\n",
+    "\n",
+    "            if next_token_id == self.tokenizer.eos_token_id:\n",
+    "                break  # reached end of sentence\n",
+    "        \n",
+    "        return self.tokenizer.batch_decode(output_ids)\n",
     "\n",
     "gpt_tests.test_gpt(GPT2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "our_gpt = GPT2(\n",
+    "    num_layers=12,\n",
+    "    num_heads=12,\n",
+    "    vocab_size=50257,\n",
+    "    hidden_size=768,\n",
+    "    max_position_embeddings=1024,\n",
+    "    dropout=0.1,\n",
+    "    layer_norm_epsilon=1e-5,\n",
+    ")\n",
+    "\n",
+    "pretrained_gpt = gpt_tests.get_pretrained_gpt()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def align_our_model_and_theirs(our_model, their_model):\n",
+    "    for our_key, their_key in zip(our_model.state_dict(), their_model.state_dict()):\n",
+    "        print(f\"{our_key:50} {their_key}\")\n",
+    "\n",
+    "\n",
+    "# align_our_model_and_theirs(our_gpt, pretrained_gpt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def copy_their_state_to_ours(our_model, their_model):\n",
+    "    our_new_state_dict = our_model.state_dict()\n",
+    "    for k, v in zip(our_new_state_dict.keys(), their_model.state_dict().values()):\n",
+    "        our_new_state_dict[k] = v\n",
+    "    our_model.load_state_dict(our_new_state_dict)\n",
+    "\n",
+    "\n",
+    "copy_their_state_to_ours(our_gpt, pretrained_gpt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ipykernel_launcher:50: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['I am a dog lover. I love to play with my dogs and have been doing it for years.\\n\\nMy husband is an avid dog lover']"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "our_gpt.generate(\"I am a dog\")"
+   ]
   }
  ],
  "metadata": {
