--- a/days/w2d3/w2d3.ipynb
+++ b/days/w2d3/w2d3.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -43,38 +43,19 @@
     "        attn_concat = self.linear_attn(x)\n",
     "\n",
     "        q, k, v = torch.split(attn_concat, self.hidden_size, dim=-1)\n",
-    "        q = einops.rearrange(\n",
-    "            q,\n",
-    "            \"batch_size seq_len (num_heads head_size) -> batch_size num_heads seq_len head_size\",\n",
-    "            head_size=self.head_size,\n",
-    "        )\n",
-    "        k = einops.rearrange(\n",
-    "            k,\n",
-    "            \"batch_size seq_len (num_heads head_size) -> batch_size num_heads seq_len head_size\",\n",
-    "            head_size=self.head_size,\n",
-    "        )\n",
-    "        v = einops.rearrange(\n",
-    "            v,\n",
-    "            \"batch_size seq_len (num_heads head_size) -> batch_size num_heads seq_len head_size\",\n",
-    "            head_size=self.head_size,\n",
-    "        )\n",
-    "\n",
+    "        q = einops.rearrange(q, \"b n (h l) -> b h n l\", l=self.head_size)\n",
+    "        k = einops.rearrange(k, \"b n (h l) -> b h n l\", l=self.head_size)\n",
+    "        v = einops.rearrange(v, \"b n (h l) -> b h n l\", l=self.head_size)\n",
+    "        \n",
     "        attn_raw = torch.einsum(\"bhts, bhfs -> bhtf\", q, k)\n",
     "\n",
     "        neg_inf = torch.tensor(-1e4)\n",
-    "        attn_mask = torch.triu(\n",
-    "            torch.ones((seq_len, seq_len), dtype=torch.bool), diagonal=1\n",
-    "        )\n",
-    "        attn_masked = torch.where(attn_mask, neg_inf, attn_raw) / math.sqrt(\n",
-    "            self.head_size\n",
-    "        )\n",
+    "        attn_mask = torch.triu(torch.ones((seq_len, seq_len), dtype=torch.bool), diagonal=1)\n",
+    "        attn_masked = torch.where(attn_mask, neg_inf, attn_raw) / math.sqrt(self.head_size)\n",
     "        attn_scores = torch.softmax(attn_masked, dim=-1)\n",
     "\n",
     "        attn = torch.einsum(\"bhtf, bhfs -> bhts\", attn_scores, v)\n",
-    "        attn = einops.rearrange(\n",
-    "            attn,\n",
-    "            \"batch_size num_heads seq_len head_size -> batch_size seq_len (num_heads head_size)\",\n",
-    "        )\n",
+    "        attn = einops.rearrange(attn, \"b h n l -> b n (h l)\")\n",
     "\n",
     "        return self.linear_output(attn)\n",
     "\n",
