--- a/days/w3d1/pp_notebook.ipynb
+++ b/days/w3d1/pp_notebook.ipynb
@@ -719,21 +719,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "our_activations = t.load(\"our_activations.pt\")\n",
+    "print(our_activations.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 10])\n",
+      "torch.Size([1, 2])\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "4"
+       "tensor([[True, True]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "input = t.load(\"input_test.pt\").to(model.device)\n",
+    "print(input.shape)\n",
+    "output = model(input[1:2,])\n",
+    "print(output.logits.shape)\n",
+    "t.isclose(output.logits.cpu(), our_activations[1].cpu())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.config.pad_token_id = 0"
+   ]
   }
  ],
  "metadata": {
