--- a/days/w3d2/w3d2.ipynb
+++ b/days/w3d2/w3d2.ipynb
@@ -20223,6 +20223,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def diagonals_are_higher():\n",
+    "    pos_pos_activations = attention_terms_for_sentence(sentences[1])[1,1]\n",
+    "    diagonals = pos_pos_activations[:-1,:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
