--- a/days/w3d3/basic_rl_template.ipynb
+++ b/days/w3d3/basic_rl_template.ipynb
@@ -2,27 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.append(\"/home/ubuntu/mlab/days/w3d3/rl_env/lib/python3.8/site-packages\")\n",
-    "sys.path.append(\"/home/ubuntu/mlab/days/w3d3/rl_env/lib/python3.9/site-packages\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
+    "\n",
     "import gym\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
     "from IPython import display\n",
     "from IPython.display import Video\n",
-    "import video_recorder\n",
+    "\n",
+    "from video_recorder import VideoRecorder\n",
     "\n",
     "env_name = \"CartPole-v1\"\n",
     "record = True\n",
@@ -33,53 +24,32 @@
     "done = False\n",
     "total_reward = 0\n",
     "\n",
+    "\n",
     "def show_state(env, step=0, info=\"\"):\n",
     "    plt.figure(3)\n",
     "    plt.clf()\n",
-    "    plt.imshow(env.render(mode='rgb_array'))\n",
-    "    plt.axis('off')\n",
+    "    plt.imshow(env.render(mode=\"rgb_array\"))\n",
+    "    plt.axis(\"off\")\n",
     "    display.clear_output(wait=True)\n",
     "    display.display(plt.gcf())\n",
+    "\n",
+    "\n",
+    "if record:\n",
+    "    video_recorder = VideoRecorder(env, f\"videos/{video_name}.mp4\")\n",
     "\n",
     "states = 0\n",
     "while not done:\n",
     "    states += 1\n",
     "    if record:\n",
     "        video_recorder.capture_frame()\n",
-    "    else:  \n",
+    "    else:\n",
     "        show_state(env)\n",
-    "    state, reward, done, _ = env.step(env.action_space.sample()) # Take a random action\n",
+    "    state, reward, done, _ = env.step(env.action_space.sample())  # Take a random action\n",
     "    total_reward += reward\n",
     "\n",
     "print(f\"total reward: {total_reward}\")\n",
     "if record:\n",
-    "    video_recorder.close()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<video src=\"videos/test_0.mp4\" controls  >\n",
-       "      Your browser does not support the <code>video</code> element.\n",
-       "    </video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Video object>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Display a saved video \n",
-    "Video(\"videos/test_0.mp4\")\n"
+    "    video_recorder.close()"
    ]
   },
   {
@@ -87,7 +57,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Display a saved video\n",
+    "Video(\"videos/test_0.mp4\")"
+   ]
   }
  ],
  "metadata": {
@@ -95,7 +68,7 @@
    "hash": "a131218803ea04de256dcf68d0863f351f9c21059ac7f8146793fa89223f504a"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -109,7 +82,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
