--- a/days/w3d3/basic_rl_template.ipynb
+++ b/days/w3d3/basic_rl_template.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,18 +13,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.54211523  0.00114739]\n",
+      "[-0.54082903  0.0012862 ]\n",
+      "[-0.53841367  0.00241536]\n",
+      "[-0.53488723  0.00352644]\n",
+      "[-0.53227614  0.00261109]\n",
+      "[-0.52859998  0.00367616]\n",
+      "[-0.52388631  0.00471367]\n",
+      "[-0.51917049  0.00471582]\n",
+      "[-0.51448788  0.00468261]\n",
+      "[-0.50987359  0.00461429]\n",
+      "[-0.50536221  0.00451138]\n",
+      "[-0.50098753  0.00437467]\n",
+      "[-0.49678231  0.00420522]\n",
+      "[-0.491778    0.00500431]\n",
+      "[-0.48701198  0.00476602]\n",
+      "[-0.48151981  0.00549217]\n",
+      "[-0.4753424   0.00617741]\n",
+      "[-0.46952564  0.00581675]\n",
+      "[-0.46411266  0.00541298]\n",
+      "[-0.46014346  0.0039692 ]\n",
+      "[-0.4556473   0.00449616]\n",
+      "[-0.45265726  0.00299004]\n",
+      "[-0.45019528  0.00246199]\n",
+      "[-0.44827938  0.0019159 ]\n",
+      "[-0.44592358  0.0023558 ]\n",
+      "[-0.44514508  0.00077849]\n",
+      "[-0.44394957  0.00119551]\n",
+      "[-0.44234577  0.00160381]\n",
+      "[-4.42345340e-01  4.26921587e-07]\n",
+      "[-0.4439483  -0.00160296]\n",
+      "[-0.44714296 -0.00319467]\n",
+      "[-0.44990603 -0.00276307]\n",
+      "[-0.45421731 -0.00431127]\n",
+      "[-0.4580452  -0.00382789]\n",
+      "[-0.46136157 -0.00331638]\n",
+      "[-0.46514202 -0.00378045]\n",
+      "[-0.47035865 -0.00521663]\n",
+      "[-0.47497288 -0.00461423]\n",
+      "[-0.47995052 -0.00497764]\n",
+      "[-0.48625458 -0.00630406]\n",
+      "[-0.49183814 -0.00558356]\n",
+      "[-0.49665955 -0.0048214 ]\n",
+      "[-0.50068277 -0.00402323]\n",
+      "[-0.50587774 -0.00519496]\n",
+      "[-0.51020555 -0.00432781]\n",
+      "[-0.51363378 -0.00342823]\n",
+      "[-0.51613673 -0.00250296]\n",
+      "[-0.51869565 -0.00255892]\n",
+      "[-0.52229134 -0.00359569]\n",
+      "[-0.52689684 -0.0046055 ]\n",
+      "[-0.5324776  -0.00558076]\n",
+      "[-0.53899177 -0.00651418]\n",
+      "[-0.54439055 -0.00539877]\n",
+      "[-0.54863348 -0.00424293]\n",
+      "[-0.55268883 -0.00405535]\n",
+      "[-0.55752628 -0.00483745]\n",
+      "[-0.56210971 -0.00458343]\n",
+      "[-0.56540496 -0.00329524]\n",
+      "[-0.56938748 -0.00398252]\n",
+      "[-0.57402766 -0.00464018]\n",
+      "[-0.57929107 -0.00526341]\n",
+      "[-0.58313872 -0.00384766]\n",
+      "[-0.5855422  -0.00240348]\n",
+      "[-0.58748377 -0.00194157]\n",
+      "[-5.87949130e-01 -4.65360765e-04]\n",
+      "[-0.58693486  0.00101427]\n",
+      "[-5.86448413e-01  4.86442115e-04]\n",
+      "[-5.86493386e-01 -4.49735794e-05]\n",
+      "[-0.58506944  0.00142394]\n",
+      "[-0.58318708  0.00188236]\n",
+      "[-0.58086018  0.0023269 ]\n",
+      "[-0.57710593  0.00375425]\n",
+      "[-0.5739521   0.00315383]\n",
+      "[-0.57042205  0.00353005]\n",
+      "[-0.56654198  0.00388007]\n",
+      "[-0.56134073  0.00520125]\n",
+      "[-0.55585701  0.00548371]\n",
+      "[-0.54913174  0.00672527]\n",
+      "[-0.54321516  0.00591658]\n",
+      "[-0.53815154  0.00506362]\n",
+      "[-0.53397881  0.00417273]\n",
+      "[-0.52972824  0.00425057]\n",
+      "[-0.5244317   0.00529654]\n",
+      "[-0.51912892  0.00530278]\n",
+      "[-0.51285965  0.00626926]\n",
+      "[-0.50567092  0.00718873]\n",
+      "[-0.49861658  0.00705434]\n",
+      "[-0.49174944  0.00686715]\n",
+      "[-0.4861208   0.00562864]\n",
+      "[-0.48177265  0.00434815]\n",
+      "[-0.47673738  0.00503527]\n",
+      "[-0.47105241  0.00568497]\n",
+      "[-0.4647599  0.0062925]\n",
+      "[-0.4579064  0.0068535]\n",
+      "[-0.45254241  0.00536399]\n",
+      "[-0.44670732  0.00583509]\n",
+      "[-0.44144381  0.00526351]\n",
+      "[-0.43579025  0.00565357]\n",
+      "[-0.43078766  0.00500259]\n",
+      "[-0.42547219  0.00531547]\n",
+      "[-0.42188209  0.0035901 ]\n",
+      "[-0.42004308  0.00183901]\n",
+      "[-0.4189683   0.00107478]\n",
+      "[-0.41966543 -0.00069713]\n",
+      "[-0.42112949 -0.00146406]\n",
+      "[-0.42435002 -0.00322053]\n",
+      "[-0.42830397 -0.00395395]\n",
+      "[-0.43296294 -0.00465896]\n",
+      "[-0.43829333 -0.00533039]\n",
+      "[-0.44525654 -0.00696322]\n",
+      "[-0.45280193 -0.00754539]\n",
+      "[-0.46187432 -0.00907238]\n",
+      "[-0.47140699 -0.00953268]\n",
+      "[-0.48132951 -0.00992252]\n",
+      "[-0.4925682  -0.01123869]\n",
+      "[-0.50303928 -0.01047108]\n",
+      "[-0.51466446 -0.01162518]\n",
+      "[-0.52635663 -0.01169218]\n",
+      "[-0.53902813 -0.01267149]\n",
+      "[-0.55058394 -0.01155582]\n",
+      "[-0.56193759 -0.01135365]\n",
+      "[-0.57200433 -0.01006674]\n",
+      "[-0.58270931 -0.01070497]\n",
+      "[-0.59197327 -0.00926396]\n",
+      "[-0.59972802 -0.00775474]\n",
+      "[-0.60591674 -0.00618873]\n",
+      "[-0.61149434 -0.0055776 ]\n",
+      "[-0.61642033 -0.00492599]\n",
+      "[-0.61965913 -0.00323879]\n",
+      "[-0.6221874  -0.00252827]\n",
+      "[-0.62298699 -0.00079959]\n",
+      "[-6.23052162e-01 -6.51747155e-05]\n",
+      "[-6.23382454e-01 -3.30291687e-04]\n",
+      "[-0.6219755   0.00140696]\n",
+      "[-0.62084138  0.00113412]\n",
+      "[-0.61898824  0.00185314]\n",
+      "[-0.6154294   0.00355883]\n",
+      "[-0.61019052  0.00523889]\n",
+      "[-0.60530947  0.00488104]\n",
+      "[-0.60082172  0.00448775]\n",
+      "[-0.59675996  0.00406176]\n",
+      "[-0.59215388  0.00460607]\n",
+      "[-0.58603726  0.00611662]\n",
+      "[-0.58045509  0.00558218]\n",
+      "[-0.57444856  0.00600653]\n",
+      "[-0.56906213  0.00538643]\n",
+      "[-0.56433578  0.00472635]\n",
+      "[-0.55830466  0.00603112]\n",
+      "[-0.55101372  0.00729094]\n",
+      "[-0.5435174   0.00749632]\n",
+      "[-0.53687178  0.00664562]\n",
+      "[-0.53112664  0.00574514]\n",
+      "[-0.52632505  0.0048016 ]\n",
+      "[-0.520503    0.00582204]\n",
+      "[-0.51570418  0.00479883]\n",
+      "[-0.50996456  0.00573962]\n",
+      "[-0.50432716  0.00563739]\n",
+      "[-0.49783423  0.00649294]\n",
+      "[-0.49053433  0.00729989]\n",
+      "[-0.48448201  0.00605232]\n",
+      "[-0.4787224   0.00575961]\n",
+      "[-0.47329834  0.00542406]\n",
+      "[-0.46725011  0.00604823]\n",
+      "[-0.46062248  0.00662763]\n",
+      "[-0.45546437  0.00515811]\n",
+      "[-0.45181371  0.00365066]\n",
+      "[-0.44969729  0.00211642]\n",
+      "[-0.4481306   0.00156669]\n",
+      "[-0.4471251  0.0010055]\n",
+      "[-0.44568814  0.00143696]\n",
+      "[-0.4448302   0.00085794]\n",
+      "[-0.44355754  0.00127266]\n",
+      "[-4.43879436e-01 -3.21897543e-04]\n",
+      "[-0.44479355 -0.00091411]\n",
+      "[-0.4452932  -0.00049966]\n",
+      "[-4.45374767e-01 -8.15630774e-05]\n",
+      "[-4.45037640e-01  3.37126887e-04]\n",
+      "[-0.44628428 -0.00124664]\n",
+      "[-0.4481056  -0.00182132]\n",
+      "[-0.44948828 -0.00138269]\n",
+      "[-0.45242223 -0.00293395]\n",
+      "[-0.45588595 -0.00346372]\n",
+      "[-0.45985404 -0.00396808]\n",
+      "[-0.4642973  -0.00444326]\n",
+      "[-0.46918298 -0.00488568]\n",
+      "[-0.47347497 -0.00429199]\n",
+      "[-0.47914147 -0.0056665 ]\n",
+      "[-0.48614041 -0.00699894]\n",
+      "[-0.4934197  -0.00727929]\n",
+      "[-0.50192503 -0.00850532]\n",
+      "[-0.51059279 -0.00866776]\n",
+      "[-0.51935808 -0.00876528]\n",
+      "[-0.52815516 -0.00879709]\n",
+      "[-0.53791808 -0.00976292]\n",
+      "[-0.54657363 -0.00865555]\n",
+      "[-0.55605701 -0.00948338]\n",
+      "[-0.56529734 -0.00924033]\n",
+      "[-0.57522574 -0.0099284 ]\n",
+      "[-0.58476849 -0.00954275]\n",
+      "[-0.59485503 -0.01008654]\n",
+      "total reward: -200.0\n"
+     ]
+    }
+   ],
    "source": [
     "import gym\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "from IPython import display\n",
     "from IPython.display import Video\n",
+    "#from video_recorder import VideoRecorder\n",
     "import video_recorder\n",
+    "import time\n",
     "\n",
-    "env_name = \"CartPole-v1\"\n",
+    "# env_name = \"CartPole-v1\"\n",
+    "# env_name = \"Acrobot-v1\"\n",
+    "env_name = \"MountainCar-v0\"\n",
     "record = True\n",
     "video_name = \"test_0\"\n",
     "\n",
@@ -40,25 +252,30 @@
     "    plt.axis('off')\n",
     "    display.clear_output(wait=True)\n",
     "    display.display(plt.gcf())\n",
+    "    \n",
+    "if record:\n",
+    "    recorder = video_recorder.VideoRecorder(\n",
+    "        env, f\"videos/{video_name}.mp4\")\n",
     "\n",
     "states = 0\n",
     "while not done:\n",
     "    states += 1\n",
     "    if record:\n",
-    "        video_recorder.capture_frame()\n",
+    "        recorder.capture_frame()\n",
     "    else:  \n",
     "        show_state(env)\n",
     "    state, reward, done, _ = env.step(env.action_space.sample()) # Take a random action\n",
+    "    print(state)\n",
     "    total_reward += reward\n",
     "\n",
     "print(f\"total reward: {total_reward}\")\n",
     "if record:\n",
-    "    video_recorder.close()\n"
+    "    recorder.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +289,7 @@
        "<IPython.core.display.Video object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
