--- a/days/w3d3/dqn_pg.ipynb
+++ b/days/w3d3/dqn_pg.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,14 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total reward: 13.0\n"
+      "total reward: 30.0\n"
      ]
     }
    ],
@@ -82,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total reward: 40.0\n"
+      "total reward: 28.0\n"
      ]
     }
    ],
@@ -158,7 +158,8 @@
     "\n",
     "%matplotlib inline\n",
     "\n",
-    "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\""
+    "DEVICES = [\"cuda:4\", \"cuda:5\", \"cuda:6\", \"cuda:7\"]\n",
+    "DEVICE = DEVICES[0] if torch.cuda.is_available() else \"cpu\""
    ]
   },
   {
@@ -1094,7 +1095,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1108,7 +1109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
