conv channel explanation

--- a/days/w1d2/w1d2_template.ipynb
+++ b/days/w1d2/w1d2_template.ipynb
@@ -555,6 +555,15 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In addition to operating on a single sequence or 2d array, we'll operate on multiple input and output channels - input channels are things like the 3 colors of an image, or multiple stock tickers. Multiple output channels are independent convolutions, each of which has a weight for each input location / channel combination.\n",
+    "\n",
+    "![img](../../.images/convchannels.jpeg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "hwGqzxLnY6xy"
    },
